--- a/main_file.lyx
+++ b/main_file.lyx
@@ -323,14 +323,10 @@ Protokoły
 \begin_inset Graphics
 	filename protocol_1.png
 	display false
-	scale 40
+	width 70page%
 
 \end_inset
 
-
-\end_layout
-
-\begin_layout Plain Layout
 
 \end_layout
 
@@ -364,14 +360,11 @@ Komunikacja
 \begin_layout Plain Layout
 \begin_inset Graphics
 	filename communicating.png
-	scale 50
+	display false
+	width 70page%
 
 \end_inset
 
-
-\end_layout
-
-\begin_layout Plain Layout
 
 \end_layout
 
@@ -814,7 +807,7 @@ Piloty
 Odmiany mobilne
 \end_layout
 
-\begin_layout Chapter*
+\begin_layout Chapter
 Multimedia w UPnP/DLNA
 \end_layout
 
@@ -854,7 +847,7 @@ Zdjęcia
 Miniatury multimediów
 \end_layout
 
-\begin_layout Chapter*
+\begin_layout Chapter
 Teoria, a praktyka UPnP/DLNA
 \end_layout
 
@@ -878,7 +871,7 @@ Porównanie oprogramowania serwerów UPnP/DLNA
 Porównanie oprogramowania odtwarzaczy UPnP/DLNA
 \end_layout
 
-\begin_layout Chapter*
+\begin_layout Chapter
 Realizacja oprogramowania serwera UPnP
 \end_layout
 
@@ -907,6 +900,7 @@ Współpraca z odtwarzaczami w oprogramowaniu telewizorów
 \end_layout
 
 \begin_layout Bibliography
+\labelwidthstring Odnośniki
 \begin_inset CommandInset bibitem
 LatexCommand bibitem
 key "key-1"
@@ -918,6 +912,7 @@ UPnP Forum, UPnP Device Architecture 1.0.
 \end_layout
 
 \begin_layout Bibliography
+\labelwidthstring Odnośniki
 \begin_inset CommandInset bibitem
 LatexCommand bibitem
 key "key-2"
@@ -940,6 +935,7 @@ phone-based-upnp-control.pdf
 \end_layout
 
 \begin_layout Bibliography
+\labelwidthstring Odnośniki
 \begin_inset CommandInset bibitem
 LatexCommand bibitem
 key "key-9"
@@ -961,6 +957,7 @@ http://www.upnp.org/specs/gw/UPnP-gw-DeviceProtection-v1-Service-20110224.pdf
 \end_layout
 
 \begin_layout Bibliography
+\labelwidthstring Odnośniki
 \begin_inset CommandInset bibitem
 LatexCommand bibitem
 key "key-3"
@@ -985,6 +982,7 @@ FQjCNEMLLsCjydhx6Qy1L30d4wZ5HgUVA
 \end_layout
 
 \begin_layout Bibliography
+\labelwidthstring Odnośniki
 \begin_inset CommandInset bibitem
 LatexCommand bibitem
 key "key-4"
@@ -1008,6 +1006,7 @@ CNFB10Qj3jNXfAqwV_NNQaRlBOk5zg
 \end_layout
 
 \begin_layout Bibliography
+\labelwidthstring Odnośniki
 \begin_inset CommandInset bibitem
 LatexCommand bibitem
 key "key-5"
@@ -1031,6 +1030,7 @@ ohaL355J_g
 \end_layout
 
 \begin_layout Bibliography
+\labelwidthstring Odnośniki
 \begin_inset CommandInset bibitem
 LatexCommand bibitem
 key "key-6"
